code comments added in app.component and person-table.component

--- a/src/app/components/person-table/person-table.component.html
+++ b/src/app/components/person-table/person-table.component.html
@@ -21,7 +21,7 @@
     </table>
 </div> -->
 
-<!-- ?: αν υπάρχει το personInput, φέρνει τα στοιχεία, αν δεν υπάρχει, μένει κενό -->
+<!-- ?: αν υπάρχει το personInput, φέρνει τα στοιχεία, αν δεν υπάρχει, μένει κενό επειδή έτσι το ορίσαμε στο @Input() στον controller -->
 
 <div>
     <h1>From person table component</h1>
