--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -32,13 +32,14 @@
     </tr>
   </table>
 
+  <!-- εμφανίζει το app-person-table (selector) component στο parent component -->
   <!-- <div class="d-flex gap-5 text-nowrap">
     <app-person-table></app-person-table>
   </div>
 </div> -->
 
 <div class="d-flex gap-5 text-nowrap">
-  <!-- For input we use [] -->
+  <!-- όταν εισάγουμε από parent σε child χρησιμοποιούμε [] -->
    <app-person-table [personInput]="person0"></app-person-table>
    <app-person-table></app-person-table>
    <app-person-table [personInput]="person1"></app-person-table>
@@ -46,6 +47,7 @@
 
 <h4> {{ "@for" }} Directive example</h4>
 <div class="d-flex flex-wrap text-nowrap gap-2">
+  <!-- κάθε document του users array εκχωρείται στο user κι εμφανίζεται το τελευταίο με το track -->
   @for (user of users; track user) {
     <app-person-table [personInput]="user"></app-person-table>
   }
