--- a/src/app/components/event-bind-example/event-bind-example.component.html
+++ b/src/app/components/event-bind-example/event-bind-example.component.html
@@ -3,15 +3,15 @@
     <div class="d-flex gap-2 align-items-center">
         <button
         (click)= "decrementTimes()"
-        class="btn btn-primary btn-sm flex-grow-1"> -
-        </button>
+        class="btn btn-primary btn-sm flex-grow-1"> - 
+    </button>
 
         <span>{{ times }}</span>
 
         <button
-        (click)= "incrementTimes()";
-        class="btn btn-primary btn-sm flex-grow-1"> +
-        </button>
+        (click)= "incrementTimes()"
+        class="btn btn-primary btn-sm flex-grow-1"> + 
+    </button>
     </div>
-        <button class="btn btn-primary btn-sm" (click)= "reset()">Reset</button>
+    <button class="btn btn-primary btn-sm" (click)= "reset()">Reset</button>
 </div>
