--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,54 +1,14 @@
-<div class="container-mt-4">
-  <div class="d-flex gap-5 align-items-center">
-    <h1>Coding Factory</h1>
-    <h2>Introduction to Angular</h2>
+<div class="container-mt-2">
+  <div class="d-flex flex-column gap-2">
+    <nav class="navbar navbar-dark bg-primary justify-content-between">
+      <a class="navbar-brand ms-3 cursor-pointer" role="button" href="">CF7 - Angular Introduction</a>
+    </nav>
+    <div class="d-flex flex-row gap-2">
+      <div class="d-flex flex-column text-nowrap bg-light p-2">
+        <span role="button">Component Input Example</span>
+        <span role="button"> {{ "@for" }} Directive Example</span>
+        <span role="button">Event Bind Example</span>
+      </div>
+    </div>
   </div>
-  <div class="bg-success p-2 text-light">
-    <h3>Welcome to Angular</h3>
-  </div>
-</div>
-
-<app-event-bind-example></app-event-bind-example>
-
-<div class="container mt-4">
-  <p>Hello <strong>{{ name }}</strong></p>
-
-  <table class="table tabled-bordered w-50">
-    <tr>
-      <td class="fw-semibold text-end">First Name</td>
-      <td class="ps-2">{{ person.givenName }}</td>
-    </tr>
-    <tr>
-      <td class="fw-semibold text-end">Last Name</td>
-      <td class="ps-2">{{ person.surName }}</td>
-    </tr>
-    <tr>
-      <td class="fw-semibold text-end">Age</td>
-      <td class="ps-2">{{ person.age }}</td>
-    </tr>
-    <tr>
-      <td class="fw-semibold text-end">Email</td>
-      <td class="ps-2">{{ person.email }}</td>
-    </tr>
-  </table>
-
-  <!-- εμφανίζει το app-person-table (selector) component στο parent component -->
-  <!-- <div class="d-flex gap-5 text-nowrap">
-    <app-person-table></app-person-table>
-  </div>
-</div> -->
-
-<div class="d-flex gap-5 text-nowrap">
-  <!-- όταν εισάγουμε από parent σε child χρησιμοποιούμε [] -->
-   <app-person-table [personInput]="person0"></app-person-table>
-   <app-person-table></app-person-table>
-   <app-person-table [personInput]="person1"></app-person-table>
-</div>
-
-<h4> {{ "@for" }} Directive example</h4>
-<div class="d-flex flex-wrap text-nowrap gap-2">
-  <!-- κάθε document του users array εκχωρείται στο user κι εμφανίζεται το τελευταίο με το track -->
-  @for (user of users; track user) {
-    <app-person-table [personInput]="user"></app-person-table>
-  }
 </div>
