--- a/src/app/components/event-bind-example/event-bind-example.component.html
+++ b/src/app/components/event-bind-example/event-bind-example.component.html
@@ -15,3 +15,13 @@
     </div>
     <button class="btn btn-primary btn-sm" (click) = "reset()">Reset</button>
 </div>
+
+<div class="mt-2 d-flex -flex-column gap-2 w-25">
+    <!-- $event: παίρνει αυτό που περιέχει το πεδίο 'input' -->
+    <input type="text" class="form-control" (input)="onUserInput($event)">
+    @if (!userInput) {
+        <span class="text-danger">no user input</span>
+    } @else {
+        <span class="text-bg-info p-2">{{userInput}}</span>
+    }
+</div>
