--- a/src/app/components/component-input-example/component-input-example.component.html
+++ b/src/app/components/component-input-example/component-input-example.component.html
@@ -2,6 +2,6 @@
 
 <div class="d-flex gap-5 text-nowrap">
     <app-person-table [personInput] = 'person0'></app-person-table>
-    <app-person-table></app-person-table>
+    <app-person-table></app-person-table>   <!-- undefined -->
     <app-person-table [personInput] = 'person1'></app-person-table>
 </div>
