--- a/src/app/components/event-bind-example/event-bind-example.component.html
+++ b/src/app/components/event-bind-example/event-bind-example.component.html
@@ -17,7 +17,7 @@
 </div>
 
 <div class="mt-2 d-flex -flex-column gap-2 w-25">
-    <!-- $event: παίρνει αυτό που περιέχει το πεδίο 'input' -->
+    <!-- $event: αυτό που περιέχει το πεδίο 'input' -->
     <input type="text" class="form-control" (input)="onUserInput($event)">
     @if (!userInput) {
         <span class="text-danger">no user input</span>
