--- a/src/app/components/person-table/person-table.component.html
+++ b/src/app/components/person-table/person-table.component.html
@@ -43,5 +43,9 @@
             <td class="fw-semibold text-end">Email</td>
             <td class="ps-2">{{personInput?.email}}</td>
           </tr>
+          <tr>
+            <td class="fw-semibold text-end">Address</td>
+            <td class="ps-2">{{personInput?.address}}</td>
+          </tr>
     </table>
 </div>
