--- a/src/app/components/simple-datatable/simple-datatable.component.html
+++ b/src/app/components/simple-datatable/simple-datatable.component.html
@@ -10,7 +10,7 @@
     </thead>
     <tbody>
         @for (row of data; track row) {
-            <tr class="align-middle" (dbclick)="onPersonClicked(row)">
+            <tr class="align-middle" (dblclick)="onPersonClicked(row)">
                 <td>{{row.givenName}}</td>
                 <td>{{row.surName}}</td>
                 <td>{{row.age}}</td>
