--- a/src/app/components/template-driven-forms-example/template-driven-forms-example.component.html
+++ b/src/app/components/template-driven-forms-example/template-driven-forms-example.component.html
@@ -1,1 +1,8 @@
-<p>template-driven-forms-example works!</p>
+<h4>Template-Driven Form Example</h4>
+<div class="d-flex gap-4">
+    <app-eperson-template-driven-form></app-eperson-template-driven-form>
+    <div class="d-flex flex-column gap-4">
+        <app-person-table></app-person-table>
+        <app-simple-datatable></app-simple-datatable>
+    </div>
+</div>
