--- a/src/app/components/person-table/person-table.component.html
+++ b/src/app/components/person-table/person-table.component.html
@@ -1,3 +1,7 @@
+@if (!personInput) {
+  <div class="alert alert-danger text-center">No Person Details</div>
+} @else {
+
 <!-- <div>
     <h1>From person table component</h1>
     <table class="table table-bordered w-50">
@@ -43,9 +47,22 @@
             <td class="fw-semibold text-end">Email</td>
             <td class="ps-2">{{personInput?.email}}</td>
           </tr>
-          <!-- <tr>
+          <tr>
+            <td class="fw-semibold text-end">{{ (isPerson() && "Address") || "Education" }}</td>
+            <td class="ps-2"></td>
+          </tr>
+          <!-- @if(isPerson()){
+          <tr>
             <td class="fw-semibold text-end">Address</td>
-            <td class="ps-2">{{personInput?.address}}</td>
-          </tr> -->
+            <td class="ps-2">{{ addressOreducation }}</td>
+          </tr>
+        }
+          @if(isEPesron()){
+          <tr>
+            <td class="fw-semibold text-end">Education</td>
+            <td class="ps-2">{{ addressOreducation }}</td>
+          </tr>
+        } -->
     </table>
 </div>
+}
