--- a/src/app/components/person-table/person-table.component.html
+++ b/src/app/components/person-table/person-table.component.html
@@ -33,19 +33,19 @@
         <caption>Person Details</caption>
         <tr>
             <td class="fw-semibold text-end">First Name</td>
-            <td class="ps-2">{{personInput?.givenName}}</td>
+            <td class="ps-2">{{personInput!.givenName}}</td>
           </tr>
           <tr>
             <td class="fw-semibold text-end">Last Name</td>
-            <td class="ps-2">{{personInput?.surName}}</td>
+            <td class="ps-2">{{personInput!.surName}}</td>
           </tr>
           <tr>
             <td class="fw-semibold text-end">Age</td>
-            <td class="ps-2">{{personInput?.age}}</td>
+            <td class="ps-2">{{personInput!.age}}</td>
           </tr>
           <tr>
             <td class="fw-semibold text-end">Email</td>
-            <td class="ps-2">{{personInput?.email}}</td>
+            <td class="ps-2">{{personInput!.email}}</td>
           </tr>
           <tr>
             <td class="fw-semibold text-end">{{ (isPerson() && "Address") || "Education" }}</td>
