upgraded typescript version

--- a/src/app/components/person-table/person-table.component.html
+++ b/src/app/components/person-table/person-table.component.html
@@ -26,6 +26,7 @@
 </div> -->
 
 <!-- ?: αν υπάρχει το personInput, φέρνει τα στοιχεία, αν δεν υπάρχει, μένει κενό επειδή έτσι το ορίσαμε στο @Input() στον controller -->
+ <!-- !: αν givenName/surname/etc.: null δεν εμφανίζεται τίποτα -->
 
 <div>
     <h1>From person table component</h1>
