--- a/src/app/components/eperson-template-driven-form/eperson-template-driven-form.component.html
+++ b/src/app/components/eperson-template-driven-form/eperson-template-driven-form.component.html
@@ -58,6 +58,6 @@
         color="primary">
         Submit
     </button>
-    <button (click)="onSetValue()">Set Value</button>
+    <button class="mt-3"(click)="onSetValue()">Set Value</button>
     <!-- {{eForm.value | json}} -->
 </div>
