--- a/src/app/components/eperson-reactive-form/eperson-reactive-form.component.html
+++ b/src/app/components/eperson-reactive-form/eperson-reactive-form.component.html
@@ -34,6 +34,9 @@
             <mat-error>Education is a required field</mat-error>
         </mat-form-field>
     </form>
-    <button mat-flat-button color="primary">Submit</button>
-    <button class="mt-3">Set Value</button>
+    <button
+    mat-flat-button color="primary" [disabled]="form.invalid" (click)="onSubmit(form.value)">
+    Submit
+</button>
+    <button (click)="onSetValue()" class="mt-3">Set Value</button>
 </div>
