EPerson DataTable Component succefully input in EPerson DataTable Component Example & person service created

--- a/src/app/components/eperson-reactive-form/eperson-reactive-form.component.html
+++ b/src/app/components/eperson-reactive-form/eperson-reactive-form.component.html
@@ -35,8 +35,6 @@
         </mat-form-field>
     </form>
     <button
-    mat-flat-button color="primary" [disabled]="form.invalid" (click)="onSubmit(form.value)">
-    Submit
-</button>
+    mat-flat-button color="primary" [disabled]="form.invalid" (click)="onSubmit()">Submit</button>
     <button (click)="onSetValue()" class="mt-3">Set Value</button>
 </div>
