codefix at eperson-reactive-form component

--- a/src/app/components/eperson-reactive-form/eperson-reactive-form.component.html
+++ b/src/app/components/eperson-reactive-form/eperson-reactive-form.component.html
@@ -24,8 +24,8 @@
             <mat-error>Email is missing or invalid</mat-error>
         </mat-form-field>
         <mat-form-field>
-            <mat-label formControlName="education">Education</mat-label>
-            <mat-select>
+            <mat-label>Education</mat-label>
+            <mat-select formControlName="education">
                 <mat-option value="Some college, no degree">Some college, no degree</mat-option>
                 <mat-option value="Master's degree">Master's degree</mat-option>
                 <mat-option value="Bachelor's degree">Bachelor's degree</mat-option>
