--- a/src/app/components/use-registration/use-registration.component.html
+++ b/src/app/components/use-registration/use-registration.component.html
@@ -1,46 +1,49 @@
 <h4>User Registration Example</h4>
 
 <div class="d-flex flex-column mt-2 w-50">
-    <form class="d-flex flex-column">
+    <form [formGroup]="form" class="d-flex flex-column">
         <mat-form-field>
             <mat-label>Username</mat-label>
-            <input matInput type="text">
+            <input matInput type="text" formControlName="username">
             <mat-error>Username is required</mat-error>
         </mat-form-field>
 
         <mat-form-field>
             <mat-label>First Name</mat-label>
-            <input matInput type="text">
+            <input matInput type="text" formControlName="name">
             <mat-error>First Name is required</mat-error>
         </mat-form-field>
 
         <mat-form-field>
             <mat-label>Last Name</mat-label>
-            <input matInput type="text">
+            <input matInput type="text" formControlName="surname">
             <mat-error>Last Name is required</mat-error>
         </mat-form-field>
 
         <mat-form-field>
             <mat-label>Email</mat-label>
-            <input matInput type="text">
+            <input matInput type="text" formControlName="email">
             <mat-error>Email is missing or invalid</mat-error>
         </mat-form-field>
 
-        <mat-form-field>
-            <mat-label>Area</mat-label>
-            <input matInput type="text">
-        </mat-form-field>
+        <!-- Επειδή το address είναι 1 document με 2 υποπεδία, βάζουμε τα 2 mat-form-fields μέσα σε div με formGroupName -->
+        <div class="d-flex gap-2" formGroupName="address">
+            <mat-form-field class="w-50">
+                <mat-label>Area</mat-label>
+                <input matInput type="text" formControlName="area">
+            </mat-form-field>
 
-        <mat-form-field>
-            <mat-label>Road</mat-label>
-            <input matInput type="text">
-        </mat-form-field>
+            <mat-form-field class="w-50">
+                <mat-label>Road</mat-label>
+                <input matInput type="text" formControlName="road">
+            </mat-form-field>
+            </div>
 
-        <mat-form-field>
-            <mat-label>Password</mat-label>
-            <input matInput type="password">
-            <mat-error>Password is missing or invalid</mat-error>
-        </mat-form-field>
+            <mat-form-field >
+                <mat-label>Password</mat-label>
+                <input matInput type="password">
+                <mat-error>Password is missing or invalid</mat-error>
+            </mat-form-field>
 
         <mat-form-field>
             <mat-label>Confirm Password</mat-label>
@@ -49,14 +52,17 @@
         </mat-form-field>
 
         <button
-        mat-flat-button color="primary"
+        mat-flat-button
+        color="primary"
+        [disabled]="form.invalid"
+        (click)="onSubmit()"
         >Register
     </button>
     </form>
 </div>
 
 <button
-mat-flat-button color="primary" class="mt-2"
+mat-flat-button color="primary" class="mt-2 w-50"
 >
 Register Another User
 </button>
