signal effect and guards implemented

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -2,6 +2,7 @@
       <a class="navbar-brand ms-3 cursor-pointer" role="button" routerLink="">
         CF7 - Angular Introduction
     </a>
+    <!-- αν υπάρχει η μεταβλητή στην οποία είναι εκχωρημένη η signal user$... -->
     @if (user()) {
       <span class="me-3 d-flex gap-2 text-light">
         Welcome, {{user()?.username}}
