user-registration code fix & jwt token expiration guard added

--- a/src/app/components/user-registration/user-registration.component.html
+++ b/src/app/components/user-registration/user-registration.component.html
@@ -1,6 +1,5 @@
 <h4>User Registration Example</h4>
 @if (registrationStatus.message === "Not attempted yet.") {
-
     <div class="d-flex flex-column mt-2 w-50">
         <form [formGroup]="form" class="d-flex flex-column">
             <mat-form-field>
@@ -25,14 +24,12 @@
                 <mat-label>Email</mat-label>
                 <input matInput type="text" formControlName="email" (blur)="check_duplicate_email()">
                 <!-- blur: click away -->
-                <mat-error>{{emailErrorMessage()}}</mat-error>
-                <!-- @if(form.get('email')?.hasError('duplicateEmail')) {
+                <!-- <mat-error>{{emailErrorMessage()}}</mat-error> -->
+                @if(form.get('email')?.hasError('duplicateEmail')) {
                     <mat-error>Email is already reistered</mat-error>
-                } @else {
-                    @if(form.get('email')?.invalid && form.get('email')?.touched) {
+                } @else if(form.get('email')?.invalid && form.get('email')?.touched) {
                         <mat-error>Email is missing or invalid</mat-error>
                     }
-                } -->
             </mat-form-field>
 
             <!-- Επειδή το address είναι 1 document με 2 υποπεδία, βάζουμε τα 2 mat-form-fields μέσα σε div με formGroupName -->
@@ -60,12 +57,10 @@
             <mat-form-field>
                 <mat-label>Confirm Password</mat-label>
                 <input matInput type="password" formControlName="confirmPassword">
-                @if(form.get('confirmPassword')?.invalid && form.get('confirmPassword')?.touched) {
-                <mat-error>Confirm Password is missing or invalid</mat-error>
-                } @else {
-                @if (form.get('confirmPassword')?.hasError('passwordMismatch')) {
-                <mat-error>Passwords do not match.</mat-error>
-                }
+                @if(form.get('confirmPassword')?.hasError("passwordMismatch")) {
+                <mat-error>Password does not match.</mat-error>
+                } @else if (form.get('confirmPassword')?.invalid && form.get('confirmPassword')?.touched) {
+                <mat-error>Confirm Password is missing or invalid.</mat-error>
                 }
             </mat-form-field>
 
@@ -73,7 +68,7 @@
             </button>
         </form>
     </div>
-} else {
+} @else {
     @if(registrationStatus.success) {
         <div class="alert alert-success mt-2 w-50">
             <strong>Sucess:</strong> {{registrationStatus.message}}
